# quality-result-gui

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  README.md  pyproject.toml  quality-result-gui.code-workspace  requirements-ci.in  requirements-ci.txt  requirements.in  requirements.txt  setup.cfg  setup.py  whitelist.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-style.yml  release.yml  tests.yml
.github/workflows/draft-release/: extract-changes.py  set-version-post0.py  set-version.py
src/quality_result_gui/: __init__.py  env.py  layer_mapping.py  quality_data_fetcher.py  quality_error_manager.py  quality_error_manager_settings.py  quality_error_visualizer.py  quality_errors_filters.py  quality_errors_tree_filter_menu.py  quality_errors_tree_model.py  quality_layer.py  quality_layer_styles.py
src/quality_result_gui/api/: quality_api_client.py
src/quality_result_gui/api/types/: quality_error.py
src/quality_result_gui/configuration/: __init__.py
src/quality_result_gui/resources/i18n/: fi.qm  fi.ts
src/quality_result_gui/style/: __init__.py  default_style.py  quality_layer_error_symbol.py
src/quality_result_gui/ui/: quality_error_tree_view.py  quality_errors_dock.py  quality_errors_dock.ui  quality_errors_tree_filter_menu.py
src/quality_result_gui/utils/: layer_utils.py  styling_utils.py
src/quality_result_gui_plugin/: __init__.py  env.py  metadata.txt  plugin.py
src/quality_result_gui_plugin/dev_tools/: dev_tools_dialog.py  dev_tools_dialog.ui  mock_api_client.py  response_parser.py
src/quality_result_gui_plugin/dev_tools/example_quality_errors/: quality_errors.json  quality_errors_from_conftest.json
src/quality_result_gui_plugin/resources/i18n/: fi.qm  fi.ts
test/: __init__.py  conftest.py
test/integration/: conftest.py  test_checkbox_actions.py  test_filters.py  test_integration.py  test_tree_view.py
test/quality_result_gui/: test_quality_data_fetcher.py  test_quality_error_visualizer.py  test_quality_errors_dock.py  test_quality_errors_tree_filter_menu.py  test_quality_errors_tree_model.py  test_quality_layer.py
test/quality_result_gui_plugin/: test_plugin.py
test/unit/quality_result_gui/: test_quality_data_fetcher.py  test_quality_error_visualizer.py  test_quality_errors_filters.py  test_quality_errors_manager.py  test_quality_errors_tree_model.py  test_quality_layer.py
test/unit/quality_result_gui/ui/: test_quality_errors_dock.py
test/unit/quality_result_gui_plugin/: test_plugin.py
tools/: update-translations.py
